--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,15 @@
 
 $text-color:#fff;
 $btn-background-hover:#000;
+$siteBackground:#111;
+
 
 *{
     color : $text-color;
+    
+}
+body {
+    background-color: $siteBackground;
 }
 body::-webkit-scrollbar {
     overflow-y: auto;
@@ -40,6 +46,8 @@ body::-webkit-scrollbar {
     
     .homePhoto{
         height:500px;
+        object-fit: cover;
+        transition: .4s ease;
         
         &:hover{
             transform: scale(1.1);
