--- a/src/App.scss
+++ b/src/App.scss
@@ -1,92 +1,103 @@
-
 $text-color:#fff;
 $btn-background-hover:#000;
 $siteBackground:#111;
 
 
-*{
-    color : $text-color;
-    
+* {
+    color: $text-color;
+
 }
+
 body {
     background-color: $siteBackground;
 }
+
 body::-webkit-scrollbar {
     overflow-y: auto;
-    width:0px;  
+    width: 0px;
     background-color: #000;
-  }
+}
 
 .btn {
-  background-color: #999;
-  color: black;
-  border: 1px solid #e7e7e7;
-  
-  &:hover{
-      background-color:$btn-background-hover;
-      color: $text-color;
-  }
+    background-color: #999;
+    color: black;
+    border: 1px solid #e7e7e7;
+
+    &:hover {
+        background-color: $btn-background-hover;
+        color: $text-color;
+    }
 }
+
 @media (min-width: 768px) {
-   
+
     #sidebar {
-        margin-top:280px;
-        margin-left:2%;
+        margin-top: 280px;
+        margin-left: 2%;
         position: fixed;
 
         .baslik {
-            font-size:120%;
+            font-size: 120%;
         }
-        
+
         .nav-item:hover {
             text-decoration: none;
-            font-size:17px;
-        } 
-    }
-    
-    .homePhoto{
-        height:500px;
-        object-fit: cover;
-        transition: .4s ease;
-        
-        &:hover{
-            transform: scale(1.1);
+            font-size: 17px;
         }
-    
     }
 
-    .projectImages{
+    .homePhoto {
+        height: 500px;
+        object-fit: cover;
+        transition: .4s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+
+    }
+
+    .projectImages {
         transition: .6s ease;
         opacity: 0.66;
-        
+
         &:hover {
             transform: scale(1.1);
             opacity: 1;
         }
     }
 
-    #homeButton{
-        margin-left:23px;
+    #homeButton {
+        margin-left: 23px;
     }
-    .socialMedia{
-        margin-top:30px;
+
+    .socialMedia {
+        margin-top: 30px;
         /* margin-left:20px */
     }
-   
-    .contactPage{
+
+    .contactPage {
 
         padding-top: 50px;
 
-        .contactIcons{
+        .contactIcons {
             margin-top: 40px;
-            margin-left:120px;
+            margin-left: 120px;
         }
     }
-    
-    .projectDetail{
+
+    .projectDetail {
         padding-top: 30px;
     }
 
-   
-  }
-  
+
+}
+
+//   TABLET PHONE
+@media (max-width: 768px) {
+
+    .projectDetail {
+        padding-top: 30px;
+    }
+
+}
